<resources>
    <string name="app_name">Melodia</string>
    <string name="home_button">Home</string>
    <string name="playlist_button">Playlist</string>
    <string name="share_button">Share</string>
    <string name="song_button">Listen</string>
    <string name="radio_button">Radio</string>
    <string name="title_activity_playlist">PlaylistActivity</string>
    <string name="title_home">Home</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_share">Share</string>
    <string name="no_account">You need an account to use this feature.</string>
    <string name="login_button">LOGIN</string>
    <string name="register_button">REGISTER</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_radio">Radio</string>
    <string name="queue">Add to Queue</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="wip">This feature is currently a work in progress.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="add_tracks_to_playlist">Add Tracks to Playlist</string>
    <string name="delete">Delete</string>
    <string name="removed_from_playlist">Remove from Playlist</string>
    <string name="remove_from_queue">Remove from Queue</string>
    <string name="play">Play</string>

    remove_from_queue
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
